doc: rewrite E2E test guide with one-click automation script
PowerShell script automates the full cycle:
1. Stop old Java/Node processes
2. Clean data/spot-exchange directory
3. Maven compile (parallel)
4. Extract layered Jars
5. Start Media Driver → Matching → Gateway (with cnc.dat polling)
6. Run node e2e-integration-test.js

Added test phase summary table and monitoring endpoint reference.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>